--- a/chamber/styles/directory-small.css
+++ b/chamber/styles/directory-small.css
@@ -1,3 +1,10 @@
+:root{
+    --Primary-Color: #263238;
+    --Secondary-Color: #455a64;
+    --Background-Color: #d4dfe4;
+    --Text-Color: #ffffff;
+}
+
 @media (max-width: 768px) {
     /* .menu-toggle-small{
         display: block;
@@ -119,11 +126,28 @@
     .menu-toggle.active + nav ul {
         display: flex;
     }
+    .container {
+        display: flex;
+        flex-direction: column;
+        /* grid-template-columns: 1fr 1fr 1fr; */
+        gap: 10px;
+        margin-top: 2rem;
+        /* padding: 20px; */
+    }
 
-    /* section h2{
-        background-color: #0056b3;
-        text-align: center;
-    } */
+    .events {
+        /* background-color: var(--Background-Color); */
+        width: 98%;
+        margin-bottom: 1rem;
+        /* box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5); */
+    }
+
+    .current-weather, .forecast{
+        width: 90%;
+        margin-bottom: 1rem;
+
+    }
+
 
     @keyframes slideDown {
         from {
@@ -136,31 +160,21 @@
         }
     }
 
-    /* .hero {
-        margin-top: 100px;
-    } */
-
     .view-toggle{
         display: none;
     }
-    .content {
-        flex-direction: column;
-        gap: 1rem;
-    }
-
-    /* .events, .weather, .forecast {
-        width: 100%;
-    } */
 
     .members {
+        /* width: 100%; */
         /* background-color: aqua; */
         display: flex;
         flex-direction: column;
         align-items: center;
+        margin-top: 2rem;
     }
 
     .member-card {
-        /* width: 100%; */
+        width: 100%;
         margin: 0.4rem;
     }
 
@@ -168,6 +182,7 @@
         flex-direction: column;
         /* align-items: center; */
         /* text-align: center; */
+        /* background-color: var(--Background-Color); */
     }
 
     footer .left, footer .center, footer .right {
@@ -175,14 +190,6 @@
         width: 100%;
         margin-bottom: 1rem;
     }
-
-    /* footer .center {
-        justify-content: center;
-    }
-
-    footer .right {
-        text-align: center;
-    } */
 }
 
 
@@ -230,7 +237,7 @@
         display: none;
         flex-direction: column;
         gap: 0.5rem;
-        background-color: #dee0e2;
+        background-color: var(--Secondary-Color);
         position: absolute;
         top: 85px;
         left: 0;
@@ -250,7 +257,7 @@
         text-align: center;
         align-items: center;
         text-decoration: none;
-        color: #333;
+        color: var(--Primary-Color);
         font-size: 1rem;
         display: block;
         padding: 0.3rem;
@@ -300,13 +307,5 @@
         margin: 0.4rem;
     }
 
-    footer {
-        flex-direction: column;
-    }
 
-    footer .left, footer .center, footer .right {
-        flex: none;
-        width: 100%;
-        margin-bottom: 1rem;
-    }
 }
