--- a/chamber/styles/directory-small.css
+++ b/chamber/styles/directory-small.css
@@ -37,23 +37,7 @@
         align-items: center;
         text-align: center;
     }
-
-
-
-    .theme-toggle-small {
-        display: none;
-        /* order: 1; */
-        
-    }
     
-    
-    .theme-toggle button {
-        background: none;
-        border: none;
-        font-size: 1.5rem;
-        cursor: pointer;
-        /* color: var(--Text-Color); */
-    }
     .menu-toggle-small{
         order: 2;
         display: block;
@@ -185,9 +169,9 @@
 
     footer {
         flex-direction: column;
-        /* align-items: center; */
-        /* text-align: center; */
-        /* background-color: var(--Background-Color); */
+    }
+    footer a{
+        color: var(--Text-Color);
     }
 
     footer .left, footer .center, footer .right {
@@ -226,16 +210,6 @@
 
     .comp-name p {
         font-size: 0.6rem;
-    }
-
-    .theme-toggle {
-        margin-bottom: 1rem;
-    }
-
-    .menu-toggle {
-        margin-bottom: 1rem;
-        order: 2;
-        display: block;
     }
 
     nav ul {
