--- a/chamber/styles/directory.css
+++ b/chamber/styles/directory.css
@@ -3,6 +3,27 @@
     --Secondary-Color: #455a64;
     --Background-Color: #d4dfe4;
     --Text-Color: #ffffff;
+    --animation-delay: 0s; 
+    --rotate-angle: 0deg;
+}
+.fa-beat,
+.fa-beat-fade,
+.fa-fade,
+.fa-flip,
+.fa-spin {
+    animation-delay: var(--fa-animation-delay);
+}
+
+.fa-flip-horizontal {
+    transform: scaleX(-1);
+}
+
+.fa-flip-vertical {
+    transform: scaleY(-1);
+}
+
+.fa-rotate-by {
+    transform: rotate(var(--fa-rotate-angle));
 }
 
 
