--- a/chamber/styles/directory-small.css
+++ b/chamber/styles/directory-small.css
@@ -21,6 +21,21 @@
         gap: 0.5rem;
         margin-left: 0;
     }
+
+    .hero-text p{
+        font-size: 1.5rem;
+        /* margin: 0.5rem 0 0; */
+        line-height: 1.9rem;
+        background: var(--Secondary-Color);
+        opacity: 0.8;
+        color: white;
+        font-weight: bold;
+    
+    }
+
+    main h1{
+        text-align: center;
+    }
 }
 
 @media (max-width: 600px) {
@@ -54,7 +69,7 @@
         right: 0rem;
         padding: 1rem;
         /* width: 100%; */
-        /* z-index: 999; */
+        z-index: 1000;
     }
 
     nav ul li {
@@ -112,6 +127,17 @@
     .menu-toggle.active + nav ul {
         display: flex;
     }
+
+    .hero-text p{
+        font-size: 1rem;
+        /* margin: 0.5rem 0 0; */
+        line-height: 1.5rem;
+        background: var(--Secondary-Color);
+        opacity: 0.8;
+        color: white;
+        font-weight: bold;
+    
+    }
     .container {
         display: flex;
         flex-direction: column;
@@ -135,6 +161,22 @@
 
         
     }
+
+    /* .spotlights-container {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+        gap: 1rem;
+        margin: 2rem 0;
+    }
+
+    .spotlight-card {
+        width: 100%;
+    } */
+
+    .spotlights-header h2{
+        text-align: center;
+    }
+
 
 
     @keyframes slideDown {
