--- a/styles/small.css
+++ b/styles/small.css
@@ -22,10 +22,13 @@
         flex-direction: column;
         align-items: center;
     }
+    #weather{
+        width: 100%;
+    }
 
     .left{
         width: 100%;
-        margin-bottom: 20px;
+        /* margin-bottom: 20px; */
     }
 
     .right{
