--- a/chamber/styles/directory.css
+++ b/chamber/styles/directory.css
@@ -175,6 +175,7 @@ main{
     justify-content: space-between;
     gap: 1rem;
     margin-top: 2rem;
+    margin-bottom: 2.5rem;
 }
 
 .home .spotlights-container {
@@ -182,7 +183,8 @@ main{
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     align-items: center;
     gap: 1rem;
-    margin: 2rem 0;
+    /* margin-top: 2rem; */
+    margin: 0.5rem 0;
 }
 
 .spotlight-card {
@@ -194,7 +196,7 @@ main{
 }
 
 .spotlight-card img {
-    max-width: 100%;
+    max-width: 50%;
     height: auto;
     border-radius: 8px;
     margin-bottom: 1rem;
