--- a/chamber/styles/directory.css
+++ b/chamber/styles/directory.css
@@ -206,7 +206,7 @@ main{
     font-size: 1.5rem;
     color: var(--Primary-Color);
     margin-bottom: 0.5rem;
-    text-align: center;
+    /* text-align: center; */
 }
 
 .spotlight-card p {
