--- a/chamber/styles/directory.css
+++ b/chamber/styles/directory.css
@@ -122,18 +122,18 @@ nav ul {
     opacity: 0.7;
 }
 
-.hero-text{
+.call-to-action{
     position: absolute;
-    top: 70%;
+    top: 40%;
     left: 50%;
+    margin: 2rem 0;
     transform: translate(-50%, -50%);
     color: white;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
+    opacity: 0.9;
 }
 
-.hero-text p{
-    font-size: 3rem;
-    /* margin: 0.5rem 0 0; */
+.call-to-action p{
     line-height: 5rem;
     background: var(--Secondary-Color);
     opacity: 0.87;
@@ -142,18 +142,19 @@ nav ul {
 
 }
 
-.call-to-action{
+/* .call-to-action{
     text-align: center;
     margin: 2rem 0;
-}
+} */
 
 .cta-button{
+    max-width: 130%;
     display: inline-block;
-    padding: 1rem 2rem;
+    padding: 1rem;
     background-color: var(--Primary-Color);
     color: var(--Text-Color);
     text-decoration: none;
-    font-size: 1.2rem;
+    font-size: 2.5rem;
     font-weight: bold;
     border-radius: 8px;
     transition: background-color 0.3s ease-out;
