--- a/styles/larger.css
+++ b/styles/larger.css
@@ -334,7 +334,9 @@ hr{
     flex-direction: column;
     align-items: center; 
     text-align: center;
+    cursor: pointer;
 }
+
 
 .course-item.completed {
     background-color: var(--primary-color); /* Use primary color for completed courses */
@@ -348,10 +350,10 @@ hr{
     color: var(--back2-color);
 }
 
-/* .course-item:hover {
+.course-item:hover {
     background-color: var(--back2-color);
     color: var(--text-color);
-} */
+}
 
 #total-credits {
     margin-top: 20px;
@@ -361,7 +363,7 @@ hr{
 }
 
 
-
+  
 
 
 
@@ -393,15 +395,4 @@ footer img{
     width: 100%;
     max-width: 50px;
     height: auto;
-
 }
-
-/* @media (max-width: 600px) {
-    nav ul {
-        flex-direction: column;
-    }
-    nav ul li {
-        margin: 5px 0;
-    }
-} */
-
