--- a/chamber/styles/directory.css
+++ b/chamber/styles/directory.css
@@ -130,17 +130,49 @@ nav ul {
     transform: translate(-50%, -50%);
     color: white;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
-    opacity: 0.9;
+    /* opacity: 1; */
 }
 
-.call-to-action p{
-    line-height: 5rem;
+.call-to-action a{
+    line-height: 2.5rem;
     background: var(--Secondary-Color);
     opacity: 0.87;
     color: white;
     font-weight: bold;
+    opacity: 1;
+
 
 }
+
+.call-to-action a {
+    line-height: 2.5rem;
+    background: var(--Secondary-Color);
+    opacity: 0.87;
+    color: white;
+    font-weight: bold;
+    opacity: 1;
+    animation: text-fade-in 2s ease-in-out infinite alternate;
+}
+
+@keyframes text-fade-in {
+    0% {
+        opacity: 0.5;
+        transform: scale(0.95);
+    }
+    100% {
+        opacity: 1;
+        transform: scale(1.05);
+    }
+}
+  
+
+
+
+
+
+
+
+
 
 /* .call-to-action{
     text-align: center;
