--- a/chamber/styles/directory-small.css
+++ b/chamber/styles/directory-small.css
@@ -22,7 +22,7 @@
         margin-left: 0;
     }
 
-    .call-to-action{
+    /* .call-to-action{
         position: absolute;
         top: 55%;
         left: 50%;
@@ -31,7 +31,7 @@
         color: white;
         text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
         opacity: 0.9;
-    }
+    } */
 
     .call-to-action a{
         line-height: 1.5rem;
@@ -165,7 +165,7 @@
         transform: translate(-50%, -50%);
         color: white;
         text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
-        opacity: 0.9;
+        /* opacity: 0.9; */
     }
 
     .cta-button{
