--- a/wdd231-project/styles/base.css
+++ b/wdd231-project/styles/base.css
@@ -88,13 +88,21 @@ nav ul li a:hover {
     border-radius: 4px;
     transition: background-color 0.3s ease, transform 0.2s ease;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.15);
-  }
+}
   
   /* Hover effect */
-  .hero-text .cta:hover {
+.hero-text .cta:hover {
     background-color: var(--accent-color);
     transform: scale(1.05);
     font-weight: bold;
+}
+
+.welcome-container {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1rem;
+    justify-content: center;
+    margin-top: 1.5rem;
   }
 
 
@@ -121,7 +129,8 @@ header h1 {
 
 .modal-trigger {
     /* gap: 3rem; */
-    margin-left: 5rem;
+    margin-top: 2rem;
+    align-items: center;
 }
 
 button .modal-trigger {
